--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel = "stylesheet" type="text/css" href="style.css">
     <script src="functions.js"></script>
     <title>21 Boys</title>
@@ -7,9 +9,12 @@
 </head>
 <body>
     <button id="start" onclick="deal()">Let's Play!</button>
-    <div id="counter">
+    <div id="counter" class="container">
         <h1 id ="lul"></h1>
         <h1 id ="lol"></h1>
     </div>
+    
+    <div id ="pictures" class="container-fluid"></div>
+    
 </body>
 </html>
