--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <button id="start" onclick="deal()">Let's Play!</button>
-    <div id="counter" class="container">
+    <div id="counter" class="container-fluid">
         <h1 id ="lul"></h1>
         <h1 id ="lol"></h1>
     </div>    
-    <div id ="pictures" class="container-fluid"></div>
-    
+    <div id ="pictures" class="container-fluid"><span id ="hander">My Hand</span></div>
+    <div id = "dealerPictures" class="container-fluid"><span id ="dealerHander">Dealer's Hand</span></div>
 </body>
 </html>
